force-app/main/default/objects/Premise_Status__c/Premise_Status__c.object-meta.xml
<CustomObject>
    <label>Premise Status</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Premise Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Premise Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>