force-app/main/default/objects/Premise_Status__c/fields/Customer_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_ID__c</fullName>
    <description>Customer Type ID is needed to lookup TerminationReasons from external system</description>
    <formula>&#39;1&#39;</formula>
    <label>Customer Type ID</label>
    <type>Text</type>
</CustomField>