force-app/main/default/objects/Premise_Status__c/fields/Existing_Future_Status_Converted_to_Flow__c.field-meta.xml
<CustomField>
    <fullName>Existing_Future_Status_Converted_to_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set this flag for existing future status&#39;s so they will get added to the new scheduled flow</description>
    <label>Existing Future Status Converted to Flow</label>
    <type>Checkbox</type>
</CustomField>