force-app/main/default/objects/Premise_Status__c/fields/Future_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Future_Status_Formula__c</fullName>
    <formula>&quot;Going &quot; &amp; TEXT(Status__c) &amp; &quot; on &quot; &amp; TEXT(MONTH(Status_Date__c)) &amp; &quot;-&quot; &amp; TEXT(DAY(Status_Date__c)) &amp; &quot;-&quot; &amp; TEXT(YEAR(Status_Date__c))</formula>
    <label>Future Status Formula</label>
    <type>Text</type>
</CustomField>