force-app/main/default/objects/Premise_Status__c/fields/Incremental_Sync_OK__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Sync_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incremental Sync OK</label>
    <type>Checkbox</type>
</CustomField>