force-app/main/default/objects/Premise_Status__c/fields/PremDate__c.field-meta.xml
<CustomField>
    <fullName>PremDate__c</fullName>
    <formula>CASESAFEID( Premise__c ) + &#39;-&#39; + TEXT( Status__c ) + &#39;-&#39; + TEXT(MONTH( Status_Date__c )) + TEXT(DAY( Status_Date__c )) + TEXT(YEAR( Status_Date__c ))</formula>
    <label>PremDate</label>
    <type>Text</type>
</CustomField>