force-app/main/default/objects/Premise_Status__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <label>Premise</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Premise Status History</relationshipLabel>
    <relationshipName>Premise_Statuses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>