force-app/main/default/objects/Premise_Status__c/fields/Safari_Key__c.field-meta.xml
<CustomField>
    <fullName>Safari_Key__c</fullName>
    <label>Safari Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>