force-app/main/default/objects/Premise_Status__c/fields/Safari_Termination_Key__c.field-meta.xml
<CustomField>
    <fullName>Safari_Termination_Key__c</fullName>
    <description>key to safari tblTerminations</description>
    <label>Safari Termination Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>