force-app/main/default/objects/Premise_Status__c/fields/Safari_Termination_Key_Formula__c.field-meta.xml
<CustomField>
    <fullName>Safari_Termination_Key_Formula__c</fullName>
    <formula>IF( FIND(&#39;-&#39;, Safari_Termination_Key__c ) = 0
  , NULL
  ,  MID( Safari_Termination_Key__c , FIND(&#39;-&#39;, Safari_Termination_Key__c ) + 1, LEN( Safari_Termination_Key__c ) - FIND(&#39;-&#39;, Safari_Termination_Key__c ) + 1) 
)</formula>
    <label>Safari Termination Key Formula</label>
    <type>Text</type>
</CustomField>