force-app/main/default/objects/Premise_Status__c/fields/Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Safe ID</label>
    <type>Text</type>
</CustomField>