force-app/main/default/objects/Premise_Status__c/fields/Status_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Status_Case_Safe_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Status Case Safe ID</label>
    <type>Text</type>
</CustomField>