force-app/main/default/objects/Premise_Status__c/fields/Sync_Batch__c.field-meta.xml
<CustomField>
    <fullName>Sync_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sync Batch</label>
    <referenceTo>Sync_Batch__c</referenceTo>
    <relationshipLabel>Premise Statuses</relationshipLabel>
    <relationshipName>Premise_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>