force-app/main/default/objects/Premise_Status__c/fields/Sync_Step_Completed_ID__c.field-meta.xml
<CustomField>
    <fullName>Sync_Step_Completed_ID__c</fullName>
    <description>this is needed to lookup all completed steps in tbl_c_statuskeeper for the sync process</description>
    <formula>&#39;1&#39;</formula>
    <label>Sync Step Completed ID</label>
    <type>Text</type>
</CustomField>