force-app/main/default/objects/Premise_Status__c/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Location Closing</fullName>
            </value>
            <value>
                <fullName>New Owner</fullName>
            </value>
            <value>
                <fullName>New Owner - Retained</fullName>
            </value>
            <value>
                <fullName>Not Qualified for Transport</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Utility/Pipeline Tariff Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>