force-app/main/default/objects/Premise_Status__c/validationRules/Reason_required_for_Terminations.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_required_for_Terminations</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),
    ISPICKVAL(Status__c, &#39;Terminated&#39;),
    ISBLANK(TEXT(Termination_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Termination_Reason__c</errorDisplayField>
    <errorMessage>PremiseStatus01: Termination status requires a reason</errorMessage>
</ValidationRule>